test/cases/compile_errors/extern_union_field_missing_type.zig
const Letter = extern union {
    A,
};
export fn entry() void {
    const a: Letter = .{ .A = {} };
    _ = a;
}

// error
// backend=stage2
// target=native
//
// :2:5: error: union field missing type
